==========
Change Log
==========

Version 2.1.9 - 
------------------------------
- Added class CloseMatch, a variation on Literal which matches 
  "close" matches, that is, strings with at most 'n' mismatching
  characters.

- Minor API change in pyparsing_common. Renamed some of the common
  expressions to PEP8 format (to be consistent with the other 
  pyparsing_common expressions):
  . signedInteger -> signed_integer
  . sciReal -> sci_real
  
  Also, in trying to stem the API bloat of pyparsing, I've copied
  some of the global expressions and helper parse actions into 
  pyparsing_common, with the originals to be deprecated and removed
  in a future release:
  . commaSeparatedList -> pyparsing_common.comma_separated_list
  . upcaseTokens -> pyparsing_common.upcaseTokens
  . downcaseTokens -> pyparsing_common.downcaseTokens

  (I don't expect any other expressions, like the comment expressions,
  quotedString, or the Word-helping strings like alphas, nums, etc.
  to migrate to pyparsing_common - they are just too pervasive. As for
  the PEP8 vs camelCase naming, all the expressions are PEP8, while
  the parse actions in pyparsing_common are still camelCase. It's a 
  small step - when pyparsing 3.0 comes around, everything will change
  to PEP8 snake case.)


Version 2.1.8 - 
------------------------------
- Fixed issue in the optimization to _trim_arity, when the full 
  stacktrace is retrieved to determine if a TypeError is raised in
  pyparsing or in the caller's parse action. Code was traversing
  the full stacktrace, and potentially encountering UnicodeDecodeError.

- Fixed bug in ParserElement.inlineLiteralsUsing, causing infinite 
  loop with Suppress.

- Fixed bug in Each, when merging named results from multiple
  expressions in a ZeroOrMore or OneOrMore. Also fixed bug when
  ZeroOrMore expressions were erroneously treated as required 
  expressions in an Each expression.
  
- Added a few more inline doc examples.
